added plant containers

--- a/index.html
+++ b/index.html
@@ -59,7 +59,40 @@
           >
         </div>
       </div>
-      <div class="hero"></div>
+      <div class="hero">
+        <div class="hero-text">
+          <p class="big-text shippori-mincho-regular">
+            Enhance your home <br />
+            with green life
+          </p>
+          <div>
+            <button class="hero-bttn">Shop More</button>
+          </div>
+        </div>
+      </div>
+      <div class="column-plants">
+        <div class="product">
+          <img
+            src="images/Serene Monstera Plant in Stylish Beige Pot - Indoor Plant Enthusiast's Favorite 1.svg"
+            alt=""
+          />
+          <h3>Monstera</h3>
+          <p>$ 40</p>
+        </div>
+        <div class="product">
+          <img
+            src="images/Fiddle Leaf Fig For Indoor Plants Ideas 1.svg"
+            alt=""
+          />
+          <h3>Fiddle Leaf Fig</h3>
+          <p>$ 45</p>
+        </div>
+        <div class="product">
+          <img src="images/download 1.png" alt="" />
+          <h3>Rubber Fig</h3>
+          <p>$ 35</p>
+        </div>
+      </div>
       <div class="footer"></div>
     </div>
   </body>
