added new parts of the main page and CSS effects

--- a/index.html
+++ b/index.html
@@ -73,26 +73,102 @@
       <div class="column-plants">
         <div class="product">
           <img
-            src="images/Serene Monstera Plant in Stylish Beige Pot - Indoor Plant Enthusiast's Favorite 1.svg"
+            src="images/Serene Monstera Plant in Stylish Beige Pot - Indoor Plant Enthusiast's Favorite 1.png"
+            class="default-img"
             alt=""
           />
+          <img
+            src="images/Monstera Deliciosa - 35-50 cm 1.png"
+            class="hover-img"
+            alt=""
+          />
+          <!-- asseti -->
+          <div class="icon cloud"><i class="fa-solid fa-cloud"></i></div>
+          <div class="icon moon"><i class="fa-regular fa-moon"></i></div>
+          <div class="icon sun"><i class="fa-regular fa-sun"></i></div>
           <h3>Monstera</h3>
           <p>$ 40</p>
         </div>
         <div class="product">
           <img
-            src="images/Fiddle Leaf Fig For Indoor Plants Ideas 1.svg"
+            src="images/Fiddle Leaf Fig For Indoor Plants Ideas 1.png"
+            class="default-img"
             alt=""
           />
+          <img src="images/fiddle leaf fig.jpeg" class="hover-img" alt="" />
+          <div class="icon cloud"><i class="fa-solid fa-cloud"></i></div>
+          <div class="icon moon"><i class="fa-regular fa-moon"></i></div>
+          <div class="icon sun"><i class="fa-regular fa-sun"></i></div>
           <h3>Fiddle Leaf Fig</h3>
           <p>$ 45</p>
         </div>
         <div class="product">
-          <img src="images/download 1.png" alt="" />
+          <img src="images/download 1.png" class="default-img" alt="" />
+          <img src="images/rubber fig leaves.jpeg" class="hover-img" alt="" />
+          <div class="icon cloud"><i class="fa-solid fa-cloud"></i></div>
+          <div class="icon moon"><i class="fa-regular fa-moon"></i></div>
+          <div class="icon sun"><i class="fa-regular fa-sun"></i></div>
           <h3>Rubber Fig</h3>
           <p>$ 35</p>
         </div>
       </div>
+
+      <section class="plant-care-section">
+        <div class="top-row">
+          <div class="text-box">
+            <h2 class="shippori-mincho-regular">
+              Why Taking Care of Plants Matters
+            </h2>
+            <p>
+              Taking care of plants goes beyond just keeping them alive — it
+              brings a range of benefits to both people and their environments.
+              Healthy plants improve air quality, boost mood, and add a sense of
+              calm to indoor spaces. Regular care, such as watering, providing
+              enough light, and removing dust or dead leaves, helps plants
+              thrive and grow beautifully. Caring for plants can also be a
+              mindful, rewarding routine, encouraging patience and
+              responsibility. Whether you're nurturing a single houseplant or an
+              entire garden, consistent attention ensures that plants stay
+              vibrant, resilient, and continue to enhance your space with their
+              natural beauty.
+            </p>
+          </div>
+          <div class="main-img-box">
+            <img
+              src="images/Download free image of Monsteras nature shadow plant_ by Pinn about background, potted plant, palm tree, flower, and plant 13345986 1 (1).png"
+              alt="Main plant image"
+            />
+          </div>
+        </div>
+
+        <div class="bottom-row">
+          <div class="img-container">
+            <img
+              src="images/𝗩𝗮𝘁𝘁𝗻𝗮 𝗱𝗶𝗻𝗮 𝗸𝗿𝘂𝗸𝘃ä𝘅𝘁𝗲𝗿 𝗽å 𝗿ä𝘁𝘁 𝘀ä𝘁𝘁 1.png"
+              alt=""
+            />
+            <div class="hover-overlay">
+              <span>Watering</span>
+            </div>
+          </div>
+          <div class="img-container">
+            <img
+              src="images/Growing Gardens in the Dark_ A Guide to Thriving Without Sunlight 1.png"
+              alt=""
+            />
+            <div class="hover-overlay">
+              <span>Sunlight</span>
+            </div>
+          </div>
+          <div class="img-container">
+            <img src="images/download (1) 1.png" alt="" />
+            <div class="hover-overlay">
+              <span>Nutrients</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <div class="footer"></div>
     </div>
   </body>
